--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "graphql": "^16.2.0",
     "graphql-request": "^3.7.0",
+    "highlight.js": "^11.4.0",
     "html-react-parser": "^1.4.5",
     "moment": "^2.29.1",
     "next": "12.0.8",
