--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html-react-parser": "^1.4.5",
     "moment": "^2.29.1",
     "next": "12.0.8",
+    "next-pagination": "^3.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-multi-carousel": "^2.6.5",
