--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "html-react-parser": "^1.4.5",
     "moment": "^2.29.1",
     "next": "12.0.8",
-    "next-pagination": "^3.1.1",
+    "prismjs": "^1.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-multi-carousel": "^2.6.5",
-    "sass": "^1.49.0"
+    "sass": "^1.49.0",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.5",
     "tailwindcss": "^3.0.15"
   }
 }
