--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html-react-parser": "^1.4.5",
     "moment": "^2.29.1",
     "next": "12.0.8",
+    "next-themes": "^0.0.15",
     "prismjs": "^1.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
